# C-Game

./: CMakeLists.txt  GameEngine.cpp  GameEngine.h  Global.cpp  Global.h  Player.cpp  Player.h  main.cpp
Managers/: ObjectManager.cpp  ObjectManager.h
Objects/: FirePit.cpp  FirePit.h  GameObject.cpp  GameObject.h  HitBox.cpp  HitBox.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
TileManager/: TileMap.cpp  TileMap.h
